# ksm-v2

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DASHBOARD.md  DEPLOY.md  GPT.md  HANDOFF.md  LICENSE  LLM_INSTRUCTIONS.md  MEMORY.md  README.md  ROADMAP.md  TODO.md  VERSION  VISION.md  kshootmania-v1-remake.sln  kshootmania.sln  package-lock.json  package.json
kshootmania/: CMakeLists.txt  kshooteditor.vcxproj  kshooteditor.vcxproj.filters  kshootmania.vcxproj  kshootmania.vcxproj.filters
kshootmania/App/: Resource.rc  icon.icns
kshootmania/App/assets/font/: LICENSE-KSM-JA-Medium.txt  LICENSE-KSM-KR-Medium.txt  LICENSE-KSM-SC-Medium.txt  LICENSE-KSM-TC-Medium.txt
kshootmania/App/lang/: English.txt  Japanese.txt  Korean.txt  Simplified Chinese.txt  Traditional Chinese.txt
kshootmania/App/ui/parts/: course_result_chart_item.noco  select_course_chart_item.noco  select_item_bottom.noco  select_item_center.noco  select_item_top.noco
kshootmania/App/ui/scene/: course_result.noco  input_gate.noco  play_prepare.noco  result.noco  select.noco  title.noco
kshootmania/build_output/: CMakeCache.txt
kshootmania/src/: EditorMain.cpp  Main.cpp  RuntimeConfig.cpp  RuntimeConfig.hpp  main.cpp  runtime_config.cpp  runtime_config.hpp  stdafx.h
kshootmania/src/Addon/: AutoMuteAddon.cpp  CommonSEAddon.cpp  CommonSEAddon.hpp  DisableIMEAddon.cpp
kshootmania/src/Common/: AssetManagement.cpp  AssetManagement.hpp  CommonDefines.hpp  Encoding.cpp  Encoding.hpp  FrameRateLimit.cpp  FrameRateLimit.hpp  FsUtils.cpp  FsUtils.hpp  IMEUtils.cpp  IMEUtils.hpp  MathUtils.cpp  MathUtils.hpp  NocoUtils.cpp  NocoUtils.hpp
kshootmania/src/Course/: CourseContinuation.hpp  CourseInfo.cpp  CourseInfo.hpp  CoursePlayResult.cpp  CoursePlayResult.hpp  CoursePlayState.cpp  CoursePlayState.hpp
kshootmania/src/Debug/: LightingOverlay.hpp
kshootmania/src/Graphics/: FontUtils.cpp  NumberTextureFont.cpp  NumberTextureFont.hpp  ScreenUtils.cpp  ScreenUtils.hpp  TextureFontTextLayout.cpp  TextureFontTextLayout.hpp  TiledTexture.cpp  TiledTexture.hpp
kshootmania/src/Hardware/Lighting/: ILightingDriver.hpp  LightingManager.cpp  LightingManager.hpp
kshootmania/src/HighScore/: HighScoreInfo.cpp  HighScoreInfo.hpp  KscIO.cpp  KscIO.hpp  KscKey.cpp  KscKey.hpp  KscValue.cpp  KscValue.hpp
kshootmania/src/I18n/: I18n.cpp  I18n.hpp
kshootmania/src/Ini/: ConfIni.cpp  ConfIni.hpp  ConfigIni.cpp  ConfigIni.hpp  KSMIniData.cpp  KSMIniData.hpp
kshootmania/src/Input/: FXButtonUpDetection.cpp  FXButtonUpDetection.hpp  InputUtils.cpp  InputUtils.hpp  KeyConfig.cpp  KeyConfig.hpp
kshootmania/src/Input/Cursor/: ButtonCursorInputDevice.cpp  ButtonCursorInputDevice.hpp  CursorInput.cpp  CursorInput.hpp  LaserCursorInputDevice.cpp  LaserCursorInputDevice.hpp
kshootmania/src/Input/LaserInput/: AnalogStickXYLaserInput.cpp  AnalogStickXYLaserInput.hpp  ILaserInputMethod.hpp  KeyboardLaserInput.cpp  KeyboardLaserInput.hpp  MouseXYLaserInput.cpp  MouseXYLaserInput.hpp  SliderLaserInput.cpp  SliderLaserInput.hpp
kshootmania/src/MusicGame/: GameDefines.hpp  GameMain.cpp  GameMain.hpp  GameStatus.hpp  HispeedUtils.cpp  HispeedUtils.hpp  PlayModeUtil.cpp  PlayModeUtil.hpp  PlayOption.hpp  PlayResult.cpp  PlayResult.hpp  TurnUtil.cpp  TurnUtil.hpp  ViewStatus.hpp
kshootmania/src/MusicGame/Audio/: AssistTick.cpp  AssistTick.hpp  AudioDefines.hpp  AudioEffectMain.cpp  AudioEffectMain.hpp  AudioEffectUtils.cpp  AudioEffectUtils.hpp  BGM.cpp  BGM.hpp  FXChipSE.cpp  FXChipSE.hpp  LaserSlamSE.cpp  LaserSlamSE.hpp
kshootmania/src/MusicGame/Camera/: CamSystem.cpp  CamSystem.hpp  CameraMath.hpp  HighwayTilt.cpp  HighwayTilt.hpp  HighwayTiltAuto.cpp  HighwayTiltAuto.hpp  HighwayTiltManual.cpp  HighwayTiltManual.hpp
kshootmania/src/MusicGame/Graphics/: GraphicsDefines.hpp  GraphicsMain.cpp  (+1 more)
kshootmania/src/Network/: InternetRanking.cpp  InternetRanking.hpp  TwitterClient.cpp  TwitterClient.hpp
kshootmania/src/NocoExtensions/: NocoUtils.cpp  NocoUtils.hpp  VerticalMarquee.cpp  VerticalMarquee.hpp
kshootmania/src/UI/: ArrayWithLinearMenu.hpp  LinearMenu.cpp  LinearMenu.hpp  VerticalMarquee.hpp
kshootmania/src/addon/: disable_ime_addon.cpp  disable_ime_addon.hpp
kshootmania/src/common/: asset_management.cpp  asset_management.hpp  common_defines.hpp  encoding.cpp  encoding.hpp  fs_utils.cpp  ime_utils.cpp  noco_utils.cpp  noco_utils.hpp
kshootmania/src/high_score/: ksc_io.cpp
kshootmania/src/i18n/: i18n.cpp  i18n.hpp
kshootmania/src/ini/: config_ini.cpp  config_ini.hpp  ksm_ini_data.cpp
kshootmania/src/input/: fx_button_up_detection.cpp  fx_button_up_detection.hpp  key_config.cpp  key_config.hpp  platform_key.hpp  single_button_up_detection.cpp  single_button_up_detection.hpp
kshootmania/src/music_game/: game_defines.hpp  game_main.cpp  game_main.hpp  game_status.hpp  hispeed_utils.cpp  hispeed_utils.hpp  play_mode_util.cpp  play_mode_util.hpp  play_option.hpp  play_result.cpp  play_result.hpp  turn_util.cpp  turn_util.hpp  view_status.hpp
kshootmania/src/ui/: array_with_linear_menu.hpp
ksmaudio/: CMakeLists.txt  ksmaudio.vcxproj  ksmaudio.vcxproj.filters
ksmaudio/build_output/: CMakeCache.txt  cmake_install.cmake  ksmaudio.slnx
ksmaudio/include/ksmaudio/: Sample.hpp  Stream.hpp  StreamWithEffects.hpp  ksmaudio.hpp  stream.hpp  stream_with_effects.hpp
ksmaudio/src/: Sample.cpp  Stream.cpp  StreamWithEffects.cpp  ksmaudio.cpp  sample.cpp  stream.cpp  stream_with_effects.cpp
ksmaudio/src/AudioEffect/: AudioEffectBus.cpp  AudioEffectParam.cpp  ParamController.cpp
ksmaudio/src/audio_effect/: audio_effect_bus.cpp  audio_effect_param.cpp  param_controller.cpp
ksmplatform_macos/: CMakeLists.txt
ksmplatform_macos/build_output/: CMakeCache.txt  cmake_install.cmake  ksmplatform_macos.slnx
ksmplatform_macos/include/ksmplatform_macos/: input_method.h
ksmplatform_macos/src/: input_method.mm
tests/: CMakeLists.txt  Main.cpp  TestAudioEffectParam.cpp  TestHighScoreInfo.cpp  TestHighwayScroll.cpp  TestNoteGraphicsUtils.cpp  TestPlayResult.cpp
tests/build_output/: CMakeCache.txt
(+370 files in other folders)
